Complete bytecode compiler